<resources>
    <string name="app_name">FUSE</string>

    <!-- Material Design Icons -->
    <string name="material_icon_bike">&#xe915;</string>
    <string name="material_icon_go">&#xea04;</string>
    <string name="material_icon_sleep">&#xe9c2;</string>
    <string name="material_icon_eat">&#xeac6;</string>
    <string name="material_icon_play">&#xe831;</string>
    <string name="material_icon_drink">&#xea08;</string>
    <string name="material_icon_party">&#xe937;</string>
    <string name="material_icon_shop">&#xe858;</string>
    <string name="material_icon_account">&#xe800;</string>
    <string name="material_icon_account_multiple">&#xe8dc;</string>
    <string name="material_icon_message">&#xea12;</string>
    <string name="material_icon_image_box">&#xe952;</string>
    <string name="material_icon_video">&#xeb39;</string>
    <string name="material_icon_clock">&#xe881;</string>
    <string name="material_icon_star_outline">&#xeade;</string>
    <string name="material_icon_star">&#xeadf;</string>
    <string name="material_icon_share">&#xeac0;</string>
    <string name="material_icon_plus_box">&#xea7f;</string>
    <string name="material_icon_check">&#xe867;</string>
    <string name="material_icon_undo">&#xeb2c;</string>
    <string name="material_icon_friends">&#xe8d5;</string>
    <string name="material_icon_email">&#xe99c;</string>
    <string name="material_icon_password">&#xe9fa;</string>
    <string name="material_icon_flag">&#xe96a;</string>
    <string name="material_icon_city">&#xe878;</string>
    <string name="material_icon_unfold_more">&#xeb2f;</string>
    <string name="material_icon_home_variant">&#xe9bd;</string>
    <string name="material_icon_home">&#xe9be;</string>
    <string name="material_icon_hotels">&#xeae3;</string>
    <string name="material_icon_date">&#xe848;</string>
    <string name="material_icon_like">&#xeb03;</string>
    <string name="material_icon_bookmark">&#xe921;</string>
    <string name="material_icon_message_otp">&#xE0D8;</string>


    <!--FADING ACTION BAR ACTIVITY-->
    <string name="action_bar">FADING ACTION BAR ACTIVITY</string>
    <string name="login_pages">Select Login Pages</string>
    <string name="login_dark_page">Login Page Dark</string>

    <!--LOGIN PAGES ACTIVITY-->

    <string name="submit">SUBMIT</string>
    <string name="next">NEXT</string>
    <string name="onboard">ONBOARD</string>
    <string name="skip">SKIP</string>

    <string name="aadhar">AADHAR NUMBER</string>
    <string name="mobile">Mobile Number</string>
    <string name="otp">OTP</string>
    <string name="wallet_pin">Enter Wallet Pin</string>
    <string name="confirm_wallet_pin">Confirm Wallet Pin</string>

    <string name="transaction_pin">Enter Transaction Pin</string>
    <string name="confirm_transaction_pin">Confirm Transaction Pin</string>


    <string name="fontello_logo">&#xe802;</string>
    <string name="fontello_logo2">&#xe3a4;</string>
    <string name="fontello_search">&#xe816;</string>
    <string name="fontello_x_mark">&#xe81f;</string>
    <string name="fontello_x_mark_masked">&#xe806;</string>
    <string name="fontello_microfon">&#xe80f;</string>
    <string name="fontello_user">&#xe81b;</string>
    <string name="fontello_password">&#xe823;</string>
    <string name="fontello_upload">&#xe81a;</string>
    <string name="fontello_play">&#xe813;</string>
    <string name="fontello_heart_empty">&#xe80b;</string>
    <string name="fontello_heart_full">&#xe80a;</string>
    <string name="fontello_drag_and_drop">&#xe821;</string>
    <string name="digitize">DIGITIZE</string>
    <string name="pin"><![CDATA[Enter Wallet & Transaction Pin]]></string>
    <string name="confirm">CONFIRM</string>
    <string name="login">LOGIN</string>
    <string name="friend">Friend Name</string>

    <string name="messagehint">Type your message here</string>
    <string name="action_settings">Settings</string>
    <string name="pay">PAY</string>
    <string name="cancel">CANCEL</string>


</resources>
