<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_yellow"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="40dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context="com.akshaykant.com.fuse.PinActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="5dp"
        android:paddingTop="20dp"
        android:singleLine="true"
        android:text="@string/pin"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_travel_transparent_background"
        android:orientation="vertical"
        android:paddingBottom="36dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <com.akshaykant.com.fuse.font.FontelloTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/fontello_drag_and_drop"
                android:textColor="@color/cpb_blue_dark"
                android:textSize="16dp"
                tools:ignore="SpUsage" />

            <com.akshaykant.com.fuse.view.FloatLabeledEditText
                android:id="@+id/wallet_pin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                app:fletFloatingHint="@string/wallet_pin"
                app:fletHintTextColor="@color/cpb_blue_dark"
                app:fletInputType="number"
                app:fletPassword="true"
                app:fletSingleLine="true"
                app:fletTextBackground="@drawable/edit_text_background_accent"
                app:fletTextColor="@color/main_color_grey_700"></com.akshaykant.com.fuse.view.FloatLabeledEditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <com.akshaykant.com.fuse.font.FontelloTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/fontello_password"
                android:textColor="@color/cpb_blue_dark"
                android:textSize="16dp"
                tools:ignore="SpUsage" />

            <com.akshaykant.com.fuse.view.FloatLabeledEditText
                android:id="@+id/confirm_wallet_pin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                app:fletFloatingHint="@string/confirm_wallet_pin"
                app:fletHintTextColor="@color/cpb_blue_dark"
                app:fletInputType="number"
                app:fletPassword="true"
                app:fletSingleLine="true"
                app:fletTextBackground="@drawable/edit_text_background_accent"
                app:fletTextColor="@color/main_color_grey_700"></com.akshaykant.com.fuse.view.FloatLabeledEditText>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_travel_transparent_background"
        android:orientation="vertical"
        android:paddingBottom="36dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <com.akshaykant.com.fuse.font.FontelloTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/fontello_drag_and_drop"
                android:textColor="@color/cpb_blue_dark"
                android:textSize="16dp"
                tools:ignore="SpUsage" />

            <com.akshaykant.com.fuse.view.FloatLabeledEditText
                android:id="@+id/transaction_pin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                app:fletFloatingHint="@string/transaction_pin"
                app:fletHintTextColor="@color/cpb_blue_dark"
                app:fletInputType="number"
                app:fletPassword="true"
                app:fletSingleLine="true"
                app:fletTextBackground="@drawable/edit_text_background_accent"
                app:fletTextColor="@color/main_color_grey_700"></com.akshaykant.com.fuse.view.FloatLabeledEditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <com.akshaykant.com.fuse.font.FontelloTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/fontello_password"
                android:textColor="@color/cpb_blue_dark"
                android:textSize="16dp"
                tools:ignore="SpUsage" />

            <com.akshaykant.com.fuse.view.FloatLabeledEditText
                android:id="@+id/confirm_transaction_pin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                app:fletFloatingHint="@string/confirm_transaction_pin"
                app:fletHintTextColor="@color/cpb_blue_dark"
                app:fletInputType="number"
                app:fletPassword="true"
                app:fletSingleLine="true"
                app:fletTextBackground="@drawable/edit_text_background_accent"
                app:fletTextColor="@color/main_color_grey_700"></com.akshaykant.com.fuse.view.FloatLabeledEditText>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <com.akshaykant.com.fuse.font.RobotoTextView
            android:id="@+id/confirm_button"
            style="@style/ButtonStyle.RaisedEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@drawable/login_travel_selector_button"
            android:minWidth="300dp"
            android:padding="10dp"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            app:typeface="robotoMedium" />
    </LinearLayout>

</LinearLayout>
